--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,14 @@
 .DS_Store
-node_modules
-/dist
-
 package-lock.json
+node_modules
+dist
 
 # local env files
 .env.local
 .env.*.local
 
 # Log files
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+*.log*
 
 # Editor directories and files
 .idea
@@ -20,4 +17,4 @@ yarn-error.log*
 *.ntvs*
 *.njsproj
 *.sln
-*.sw*
+*.sw?
